test/src/test/k3s/test/hawkbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hawkbit
spec:
  rules:
    - host: hawkbit.${inoa.domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hawkbit
                port:
                  name: http
