test/src/test/k3s/test/hawkbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hawkbit
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: hawkbit
